--- a/application.properties
+++ b/application.properties
@@ -4,9 +4,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.datasource.username=root
 spring.datasource.password=root
-#spring.mvc.throw-exception-if-no-handler-found=true
-#spring.resources.add-mappings=false
-#eureka.client.service-url.defaultZone=http://localhost:5555/eureka
-#spring.sleuth.sampler.proability=1.0
-#spring.zipkin.baseUrl=http://localhost:4444/
-#spring.zipin.enabled=true
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
+eureka.client.service-url.defaultZone=http://localhost:5555/eureka
+spring.sleuth.sampler.proability=1.0
+spring.zipkin.baseUrl=http://localhost:4444/
+spring.zipin.enabled=true
